--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   speech_to_text: ^6.6.1
+  wifi_iot: ^0.3.19
+  flutter_material_pickers: ^3.6.0
+  connectivity_plus: ^6.0.1
+  location: ^6.0.1
+  shared_preferences: ^2.2.2
+  permission_handler: ^11.3.1
 
 # speech_recognition: ^0.5.0+1
 # speech_recognition: ^0.5.0+1
