--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
     <application
-        android:label="my_first_app"
+        android:label="KT Remote"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
