--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   permission_handler: ^11.3.1
   flutter_mjpeg: ^2.0.4
+  google_fonts: ^4.0.4
 
 # speech_recognition: ^0.5.0+1
 # speech_recognition: ^0.5.0+1
@@ -69,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.jpg
+    - assets/images/drone.png
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
